<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sistema de Trocas</string>
    <string name="title_activity_home_page">Página Inicial</string>

    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="navigation_drawer_itemHomePage">Página Inicial</string>
    <string name="navigation_drawer_itemMeusAnuncios">Meus Anúncios</string>
    <string name="navigation_drawer_itemPesquisarAnuncios">Pesquisar Anúncios</string>
    <string name="navigation_drawer_itemHistorico">Histórico</string>
    <string name="navigation_drawer_itemLogout">Sair</string>

    <string name="homePage_lblPropostas">Propostas Recebidas</string>
    <string name="homePage_lblSugestoes">Anúncios Sugeridos</string>

    <string name="item_btnAceitar">Aceitar</string>
    <string name="item_btnRecusar">Recusar</string>
    <string name="item_btnVer">Ver</string>

    <string name="hint_login">PIN</string>
    <string name="btn_pin_login">Entrar</string>
    <string name="text_login_inserir_pin">Insira o PIN de autenticação</string>
    <string name="text_view_login_mensagem">Após inserir o PIN,\na aplicação irá lembrar-se no futuro</string>
    <string name="mensagem_pin_vazio">Não introduziu um PIN.\nIntroduza para efetuar o login.</string>
    <string name="mensagem_pin_incorreto">O PIN inserido é incorreto.\nVerifique o PIN nas definições da sua conta, na aplicação Web.</string>
    <string name="mensagem_login_erro">Ocorreu um erro na autenticação</string>
    <string name="mensagem_ligacao_internet">Não está ligado à Internet. Verifique a sua ligação de rede.</string>
    <string name="mensagem_erro_login">Ocorreu um erro no processamento do pedido de autenticação à API</string>

    <string name="title_activity_criar_anuncio">Criar Anuncio</string>
    <string name="criar_anuncio_titulo">Titulo</string>
    <string name="criar_anuncio_imagens">Imagens</string>
    <string name="criar_anuncio_text_view_troco">Quero trocar:</string>
    <string name="criar_anuncio_text_view_por">Quero receber:</string>
    <string name="criar_anuncio_nome">Nome</string>

    <string name="fragment_brinquedos_faixa_etaria">Faixa Etária</string>
    <string name="fragment_brinquedos_editora">Editora</string>
    <string name="fragment_brinquedos_descricao">Descrição</string>
    <string name="fragment_jogos_produtora">Produtora</string>
    <string name="fragment_eletronica_marca">Marca</string>
    <string name="fragment_eletronica_descricao">Descrição</string>
    <string name="fragment_computadores_processador">Processador</string>
    <string name="fragment_computadores_ram">Memória RAM</string>
    <string name="fragment_computadores_hdd">Armazenamento Interno</string>
    <string name="fragment_computadores_gpu">Placa Gráfica</string>
    <string name="fragment_computadores_os">Sistema Operativo</string>
    <string name="fragment_smartphones_tamanho">Tamanho</string>
    <string name="fragment_livros_titulo">Titulo</string>
    <string name="fragment_livros_editora">Editora</string>
    <string name="fragment_livros_autor" tools:ignore="Typos">Autor</string>
    <string name="fragment_livros_isbn">ISBN</string>
    <string name="fragment_roupa_marca">Marca</string>
    <string name="fragment_roupa_tamanho">Tamanho</string>

    <string name="title_activity_enviar_proposta">Enviar Proposta</string>
    <string name="enviar_proposta_text_view">Proposta ao anúncio </string>

    <string name="title_activity_meus_anuncios">Os meus anúncios</string>

    <string name="title_activity_detalhes">Detalhes</string>
    <string name="detalhes_anuncio_titulo">Titulo:</string>
    <string name="detalhes_anuncio_data_criacao">Criado a:</string>
    <string name="detalhes_anuncio_data_conclusao">Concluído a:</string>
    <string name="detalhes_anuncio_troco">Troco:</string>
    <string name="detalhes_anuncio_por">Por:</string>
    <string name="detalhes_anuncio_criado_por">Criado por:</string>
    <string name="detalhes_anuncio_inicio">Inicio:</string>
    <string name="detalhes_anuncio_concluido">Concluido:</string>

    <string name="detalhes_proposta_proposto">Proposto em:</string>
    <string name="detalhes_proposta_anuncio">Proposta ao anúncio:</string>
    <string name="detalhes_proposta_por">Por:</string>
    <string name="detalhes_proposta_bem_propor">Bem a propôr:</string>
    <string name="detalhes_anuncio_aberto_sugestoes">Aberto para sugestões.</string>

    <string name="title_activity_historico">Histórico</string>

    <string name="detalhes_estado">Estado:</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="pesquisa_titulo">Titulo</string>

    <string name="detalhes_dialog">Detalhes de Contato</string>
    <string name="detalhes_dialog_nome">Nome a Contatar: </string>
    <string name="detalhes_dialog_telefone">Nº de telefone: </string>
    <string name="detalhes_dialog_regiao">Região: </string>

    <string name="msg_erro_aceitar_recusar">Erro ao aceitar/recusar proposta</string>
    <string name="msg_enviar_proposta">Erro ao enviar a proposta</string>
    <string name="msg_envio_proposta">Proposta enviada com sucesso</string>
</resources>
