<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="pt.ipleiria.estg.tesp.psi.projsi.sistematrocas.projetosi_android_1718.forms.SmartphonesFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutMarcaSmartphones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextMarcaSmartphones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_eletronica_marca" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescricaoSmartphones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutMarcaSmartphones"
            android:layout_below="@+id/textInputLayoutMarcaSmartphones"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editTextDescricaoSmartphones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fragment_eletronica_descricao"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutProcessadorSmartphones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutDescricaoSmartphones"
            android:layout_below="@+id/textInputLayoutDescricaoSmartphones"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextProcessadorSmartphones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_processador" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRAMSmartphones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutProcessadorSmartphones"
            android:layout_below="@+id/textInputLayoutProcessadorSmartphones"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextRAMSmartphones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_ram" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutHDDSmartphones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutRAMSmartphones"
            android:layout_below="@+id/textInputLayoutRAMSmartphones"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextHDDSmartphones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_hdd" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutOSSmartphones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutHDDSmartphones"
            android:layout_below="@+id/textInputLayoutHDDSmartphones"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextOSSmartphones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_os" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTamanhoSmartphones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutOSSmartphones"
            android:layout_below="@+id/textInputLayoutOSSmartphones"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextTamanhoSmartphones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_smartphones_tamanho" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</FrameLayout>
