<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="pt.ipleiria.estg.tesp.psi.projsi.sistematrocas.projetosi_android_1718.fragments.ComputadoresFormFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutMarcaComputadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextMarcaComputadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_eletronica_marca" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescricaoComputadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutMarcaComputadores"
            android:layout_below="@+id/textInputLayoutMarcaComputadores"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editTextDescricaoComputadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fragment_eletronica_descricao"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutProcessadorComputadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutDescricaoComputadores"
            android:layout_below="@+id/textInputLayoutDescricaoComputadores"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextProcessadorComputadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_processador" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRAMComputadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutProcessadorComputadores"
            android:layout_below="@+id/textInputLayoutProcessadorComputadores"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextRAMComputadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_ram" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutHDDComputadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutRAMComputadores"
            android:layout_below="@+id/textInputLayoutRAMComputadores"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextHDDComputadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_hdd" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutGPUComputadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutHDDComputadores"
            android:layout_below="@+id/textInputLayoutHDDComputadores"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextGPUComputadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_gpu" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutOSComputadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutGPUComputadores"
            android:layout_below="@+id/textInputLayoutGPUComputadores"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextOSComputadores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_computadores_os" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerPortatil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutOSComputadores"
            android:layout_below="@+id/textInputLayoutOSComputadores"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

</FrameLayout>
