<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="pt.ipleiria.estg.tesp.psi.projsi.sistematrocas.projetosi_android_1718.forms.JogosFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutFaixaEtariaJogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editTextFaixaEtariaJogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fragment_brinquedos_faixa_etaria"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEditoraJogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutFaixaEtariaJogos"
            android:layout_below="@+id/textInputLayoutFaixaEtariaJogos"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEditoraJogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_brinquedos_editora" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescricaoJogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutEditoraJogos"
            android:layout_below="@+id/textInputLayoutEditoraJogos"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editTextDescricaoJogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/fragment_brinquedos_descricao"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutProdutoraJogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutDescricaoJogos"
            android:layout_below="@+id/textInputLayoutDescricaoJogos"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextProdutoraJogos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_jogos_produtora" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerGeneroJogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textInputLayoutProdutoraJogos"
            android:layout_below="@+id/textInputLayoutProdutoraJogos"
            android:layout_marginTop="10dp" />

    </RelativeLayout>
</FrameLayout>
